--- a/install/ezroot/app_cjwmultisite/config/config.yml
+++ b/install/ezroot/app_cjwmultisite/config/config.yml
@@ -2,27 +2,38 @@ imports:
     - { resource: default_parameters.yml }
     - { resource: parameters.yml }
     - { resource: security.yml }
+    - { resource: services.yml }
+
+# Put parameters here that don't need to change on each machine where the app is deployed
+# https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
+parameters:
+    locale: en
+    ezpublish_rest.csrf_token_intention: authenticate
 
 # Configuration for Database connection, can have several connections used by eZ Repositories in ezplatform.yml
 doctrine:
     dbal:
         connections:
             default:
-                driver: "%database_driver%"
-                host: "%database_host%"
-                port: "%database_port%"
-                user: "%database_user%"
-                password: "%database_password%"
-                dbname: "%database_name%"
+                driver: '%database_driver%'
+                host: '%database_host%'
+                port: '%database_port%'
+                dbname: '%database_name%'
+                user: '%database_user%'
+                password: '%database_password%'
                 charset: UTF8
+    orm:
+        auto_generate_proxy_classes: '%kernel.debug%'
+        naming_strategy: doctrine.orm.naming_strategy.underscore
+        auto_mapping: true
 
 # Base configuration for Solr, for more options see: https://doc.ez.no/display/EZP/Solr+Search+Engine+Bundle
 # Can have several connections used by each eZ Repositories in ezplatform.yml
 ez_search_engine_solr:
     endpoints:
         endpoint0:
-            dsn: "%solr_dsn%"
-            core: collection1
+            dsn: '%solr_dsn%'
+            core: '%solr_core%'
     connections:
         default:
             entry_endpoints:
@@ -30,76 +41,100 @@ ez_search_engine_solr:
             mapping:
                 default: endpoint0
 
-# Stash is used for persistence cache in eZ Repository
-# Can have several caches used by different eZ Repositories in ezplatform.yml, must be one per database
-stash:
-    caches:
-        default:
-            drivers:
-                # When using multiple webservers, you must use Memcache or Redis to share the cache
-                # For single web server Apc, Memcached and Redis will give you better performance under editing load
-                - FileSystem
-            inMemory: true
-            registerDoctrineAdapter: false
-            # On Windows, using FileSystem, to avoid hitting filesystem limitations
-            # you need to change the keyHashFunction used to generate cache directories to "crc32"
-            # FileSystem:
-            #    keyHashFunction: crc32
-    # Disable tracking of cache values to avoid large disk use when using web profiler
-    tracking_values: false
-
 framework:
-    esi:             ~
-    translator:      { fallback: "%locale_fallback%" }
-    secret:          "%secret%"
+    esi: ~
+    translator: { fallback: '%locale_fallback%' }
+    secret: '%secret%'
     router:
-        resource: "%kernel.root_dir%/config/routing.yml"
+        # note: path adjusted
+        resource: '%kernel.root_dir%/config/routing.yml'
         strict_requirements: ~
     csrf_protection: ~
-    form:
-        csrf_protection:
-            enabled: true
-            # Note: changing this will break legacy extensions that rely on the default name to alter AJAX requests
-            # See https://jira.ez.no/browse/EZP-20783
-            field_name: ezxform_token
-    validation:      { enable_annotations: true }
-    # Place "eztpl" engine first intentionnally.
+    form: ~
+    validation: { enable_annotations: true }
+    #serializer: { enable_annotations: true }
+    # Place "eztpl" engine first intentionally if you setup use with legacy bridge.
     # This is to avoid template name parsing with Twig engine, refusing specific characters
     # which are valid with legacy tpl files.
-    templating:      { engines: ['twig'] } #assets_version: SomeVersionScheme
-    default_locale:  "%locale_fallback%"
-    trusted_hosts:   ~
+    templating:
+        engines: ['twig']
+        #assets_version: SomeVersionScheme
+    default_locale: '%locale_fallback%'
+    trusted_hosts: ~
     session:
-        # handler_id set to null will use default session handler from php.ini
-        handler_id:  ~
+        # https://symfony.com/doc/current/reference/configuration/framework.html#handler-id
+        handler_id: session.handler.native_file
+        save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
         # Note: eZ Publish also allows session name and session cookie configuration to be per SiteAccess, by
         #       default session name will be set to "eZSESSID{siteaccess_hash}" (unique session name per siteaccess)
-        #       Further reading on sessions: https://doc.ez.no/display/EZP/Session
-    fragments:       ~
+        #       Further reading on sessions: http://doc.ezplatform.com/en/master/guide/sessions/
+    fragments: ~
     http_method_override: true
+    assets: true
+    php_errors:
+        log: true
 
 # Twig Configuration
 twig:
-    debug:            "%kernel.debug%"
-    strict_variables: "%kernel.debug%"
+    debug: '%kernel.debug%'
+    strict_variables: '%kernel.debug%'
 
 # Assetic Configuration
 assetic:
-    debug:          "%kernel.debug%"
-    use_controller: false
-    bundles:        []
+    debug: '%kernel.debug%'
+    use_controller: '%kernel.debug%'
+    bundles: [ EzPlatformAdminUiBundle ]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
-        #closure:
-        #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
-        #yui_css:
-        #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
+        scssphp:
+            formatter: 'Leafo\ScssPhp\Formatter\Crunched'
+            import_paths: ['%kernel.project_dir%/web/']
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: "%mailer_transport%"
-    host:      "%mailer_host%"
-    username:  "%mailer_user%"
-    password:  "%mailer_password%"
-    spool:     { type: memory }
+    transport: '%mailer_transport%'
+    host: '%mailer_host%'
+    username: '%mailer_user%'
+    password: '%mailer_password%'
+    spool: { type: memory }
+
+# FOSHttpCache Configuration
+fos_http_cache:
+    cache_control:
+        rules:
+            # Make sure already cacheable (fresh) responses from eZ Platform which are errors/redirect gets lower ttl (then default_ttl)
+            -
+                match:
+                    match_response: "response.isFresh() && ( response.isServerError() || response.isClientError() || response.isRedirect() )"
+                headers:
+                    overwrite: true
+                    cache_control:
+                        max_age: 5
+                        s_maxage: 20
+            # Example of performance tuning, force TTL on 404 pages to avoid crawlers / ... taking to much load
+            # Should not be set to high, as cached 404's can cause issues for future routes, url aliases, wildcards, ..
+            -
+                match:
+                    match_response: "!response.isFresh() && response.isNotFound()"
+                headers:
+                    overwrite: true
+                    cache_control:
+                        public: true
+                        max_age: 0
+                        s_maxage: 20
+
+jms_translation:
+    source_language: en
+    locales: [en]
+    dumper:
+        add_references: false
+        add_date: false
+    configs:
+        admin:
+            dirs:
+                # note: paths adjusted
+                - "%kernel.project_dir%/vendor/ezsystems/ezplatform-admin-ui/src"
+            output_dir: "%kernel.project_dir%/vendor/ezsystems/ezplatform-admin-ui/src/bundle/Resources/translations/"
+            excluded_dirs: [Behat, Tests]
+            output_format: "xliff"
