--- a/install/ezroot/app_cjwmultisite/config/ezplatform.yml
+++ b/install/ezroot/app_cjwmultisite/config/ezplatform.yml
@@ -1,8 +1,15 @@
+imports:
+    - { resource: ngadminui.yml }
+
 ezpublish:
+    # HttpCache settings, By default 'local' (Symfony HttpCache Proxy), by setting it to 'http' you can point it to Varnish
+    http_cache:
+        purge_type: '%purge_type%'
+
     # Repositories configuration, setup default repository to support solr if enabled
     repositories:
         default:
             storage: ~
             search:
-                engine: "%search_engine%"
+                engine: '%search_engine%'
                 connection: default
