--- a/install/ezroot/app_cjwmultisite/config/routing.yml
+++ b/install/ezroot/app_cjwmultisite/config/routing.yml
@@ -1,39 +1,30 @@
 login:
-    path:   /login
-    defaults:  { _controller: ezpublish.security.controller:loginAction }
+    path: /login
+    defaults: { _controller: ezpublish.security.controller:loginAction }
+
 login_check:
-    path:   /login_check
+    path: /login_check
+
 logout:
-    path:   /logout
+    path: /logout
 
-_ezpublishRoutes:
-    resource: "@EzPublishCoreBundle/Resources/config/routing/internal.yml"
+kernel.internal:
+    resource: '@EzPublishCoreBundle/Resources/config/routing/internal.yml'
 
-_ezpublishRestRoutes:
-    resource: "@EzPublishRestBundle/Resources/config/routing.yml"
-    prefix:   "%ezpublish_rest.path_prefix%"
+kernel.rest:
+    resource: '@EzPublishRestBundle/Resources/config/routing.yml'
+    prefix: /api/ezp/v2
 
-_ezpublishRestOptionsRoutes:
-    resource: "@EzPublishRestBundle/Resources/config/routing.yml"
-    prefix: "%ezpublish_rest.path_prefix%"
-    type: rest_options
-
-_liip_imagine:
-    resource: "@LiipImagineBundle/Resources/config/routing.xml"
-
-_ezpublishPlatformUIRoutes:
-    resource: "@eZPlatformUIBundle/Resources/config/routing.yml"
+ezplatform.admin_ui:
+    resource: '@EzPlatformAdminUiBundle/Resources/config/routing.yml'
+    defaults:
+        siteaccess_group_whitelist: '%admin_group_name%'
 
 _ezplatformRepositoryFormsRoutes:
-    resource: "@EzSystemsRepositoryFormsBundle/Resources/config/routing.yml"
+    resource: '@EzSystemsRepositoryFormsBundle/Resources/config/routing.yml'
 
-_contentOnTheFly:
-    resource: "@ContentOnTheFlyBundle/Resources/config/routing.yml"
-    prefix:   "%ezpublish_rest.path_prefix%"
-
-_multiFileUpload:
-    resource: "@EzSystemsMultiFileUploadBundle/Resources/config/routing.yml"
-    prefix:   "%ezpublish_rest.path_prefix%"
+fos.js_routing:
+    resource: '@FOSJsRoutingBundle/Resources/config/routing/routing.xml'
 
 _ezpublishLegacyRoutes:
     resource: "@EzPublishLegacyBundle/Resources/config/routing.yml"
