--- a/install/ezroot/app_cjwmultisite/config/security.yml
+++ b/install/ezroot/app_cjwmultisite/config/security.yml
@@ -1,4 +1,7 @@
+# To get started with security, check out the documentation:
+# https://symfony.com/doc/current/security.html
 security:
+    # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
         ezpublish:
             id: ezpublish.security.user_provider
@@ -6,18 +9,10 @@ security:
 #!            memory: ~
 
     firewalls:
+        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-
-        ## WARNING
-        ## Until https://jira.ez.no/browse/EZP-22192 is implemented,
-        ## enabling basic auth in REST will prevent PlatformUI from working
-#        ezpublish_rest:
-#            pattern: ^/api/ezp/v2
-#            stateless: true
-#            ezpublish_http_basic:
-#                realm: eZ Publish REST API
 
         ezpublish_front:
             pattern: ^/
@@ -27,5 +22,12 @@ security:
                 require_previous_session: false
             logout: ~
 
-        default:
+        main:
             anonymous: ~
+            # activate different ways to authenticate
+
+            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
+            #http_basic: ~
+
+            # https://symfony.com/doc/current/security/form_login_setup.html
+            #form_login: ~
